Refactor code structure for improved readability and maintainability

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,8 @@
-# Database
-DATABASE_URL=postgresql://user:password@localhost:5432/fgc_kenya
-DIRECT_URL=postgresql://user:password@localhost:5432/fgc_kenya
+# Database - Supabase Configuration
+DATABASE_URL=postgresql://postgres.sunadggznzkqtetisdte:RHA8pXnXmYE3XiY@aws-1-eu-central-1.pooler.supabase.com:6543/postgres
+DIRECT_URL=postgresql://postgres.sunadggznzkqtetisdte:RHA8pXnXmYE3XiY@aws-1-eu-central-1.pooler.supabase.com:6543/postgres
+NEXT_PUBLIC_SUPABASE_URL=https://sunadggznzkqtetisdte.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # Authentication
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
@@ -19,6 +21,7 @@ EMAIL_PASS=your-app-password
 # Payment Gateway (for donations - placeholder)
 STRIPE_PUBLIC_KEY=pk_test_...
 STRIPE_SECRET_KEY=sk_test_...
+
 
 # Cloudinary (for image uploads - optional)
 CLOUDINARY_CLOUD_NAME=
