--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 # Database - Supabase Configuration
-DATABASE_URL=postgresql://postgres.sunadggznzkqtetisdte:RHA8pXnXmYE3XiY@aws-1-eu-central-1.pooler.supabase.com:6543/postgres
-DIRECT_URL=postgresql://postgres.sunadggznzkqtetisdte:RHA8pXnXmYE3XiY@aws-1-eu-central-1.pooler.supabase.com:6543/postgres
+DATABASE_URL="your-database-url"
+DIRECT_URL="your-direct-url"
 NEXT_PUBLIC_SUPABASE_URL=https://sunadggznzkqtetisdte.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # Authentication
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
@@ -15,8 +14,8 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # Email (for future implementation)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+EMAIL_USER="your-email@example.com"
+EMAIL_PASS="your-email-password"
 
 # Payment Gateway (for donations - placeholder)
 STRIPE_PUBLIC_KEY=pk_test_...
