chore: update package.json to add testing and maildev scripts, and update dependencies

--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,27 @@ JWT_EXPIRES_IN=7d
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# Email (for future implementation)
+# Email Configuration (Required for OTP and notifications)
+# For production (Gmail):
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER="your-email@example.com"
-EMAIL_PASS="your-email-password"
+EMAIL_SECURE=false
+EMAIL_USER="your-email@gmail.com"
+EMAIL_PASS="your-app-password"
+
+# For local development (Maildev):
+# EMAIL_HOST=localhost
+# EMAIL_PORT=1025
+# EMAIL_SECURE=false
+# EMAIL_USER=""
+# EMAIL_PASS=""
+
+EMAIL_FROM="FIRST Global Team Kenya <noreply@fgckenya.com>"
+ADMIN_NOTIFICATION_EMAILS="admin@example.com"
+
+# Maildev Configuration (for local development)
+MAILDEV_WEB_PORT=1080
+MAILDEV_SMTP_PORT=1025
 
 # Payment Gateway (for donations - placeholder)
 STRIPE_PUBLIC_KEY=pk_test_...
@@ -26,3 +42,16 @@ STRIPE_SECRET_KEY=sk_test_...
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+# Security (Optional - defaults provided)
+BCRYPT_ROUNDS=12
+OTP_EXPIRY_MINUTES=10
+OTP_MAX_ATTEMPTS=5
+OTP_COOLDOWN_SECONDS=60
+OTP_MAX_PER_HOUR=5
+
+# Rate Limiting (Optional - defaults provided)
+GLOBAL_RATE_LIMIT_MAX=100
+GLOBAL_RATE_LIMIT_WINDOW=60
+AUTH_RATE_LIMIT_MAX=5
+API_RATE_LIMIT_MAX=50
