--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "server": "node server/index.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
     "export": "next export",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "maildev": "maildev",
+    "maildev:dev": "maildev --web 1080 --smtp 1025 --web-ip 127.0.0.1 --smtp-ip 127.0.0.1",
+    "dev:full": "concurrently \"npm run dev\" \"npm run maildev:dev\"",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
     "db:migrate": "prisma migrate dev",
@@ -36,9 +41,11 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.6.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@upstash/ratelimit": "^2.0.7",
+    "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
@@ -52,6 +59,7 @@
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "prisma": "^6.16.3",
@@ -66,7 +74,18 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@swc/core": "^1.15.7",
+    "@swc/jest": "^0.2.39",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.3",
+    "baseline-browser-mapping": "^2.9.11",
     "concurrently": "^9.2.1",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "maildev": "^2.2.1",
     "tsx": "^4.20.6"
   }
 }
