--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
+    "dev:clean": "./start-dev.sh",
+    "dev:fast": "pkill -9 node 2>/dev/null; pkill -9 npm 2>/dev/null; rm -rf .next; next dev",
     "dev:next": "next dev",
     "dev:full": "echo '🚀 Run these commands in separate terminals:' && echo '  Terminal 1: npm run dev:next' && echo '  Terminal 2: npm run maildev:dev' && echo '' && echo 'Services:' && echo '  • App: http://localhost:3000' && echo '  • Email: http://localhost:1080' && echo '  • Admin: admin@example.com (check email)'",
     "build": "next build",
@@ -22,7 +24,10 @@
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
     "db:migrate": "prisma migrate dev",
-    "db:generate": "prisma generate"
+    "db:generate": "prisma generate",
+    "audit": "npm audit",
+    "audit:fix": "npm audit fix",
+    "security:check": "npm audit --audit-level=moderate"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -42,47 +47,47 @@
   "license": "ISC",
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/client": "^6.19.1",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@supabase/supabase-js": "^2.58.0",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/bcryptjs": "^3.0.0",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@supabase/supabase-js": "^2.89.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.4",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@upstash/ratelimit": "^2.0.7",
     "@vercel/kv": "^3.0.0",
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.12.2",
+    "autoprefixer": "^10.4.23",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "framer-motion": "^12.23.26",
     "jsonwebtoken": "^9.0.3",
-    "lucide-react": "^0.544.0",
-    "next": "^15.5.4",
+    "lucide-react": "^0.562.0",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
-    "prisma": "^6.19.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
     "sequelize": "^6.37.7",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5.9.2",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
     "zod": "^4.2.1"
   },
   "devDependencies": {
@@ -93,11 +98,13 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
+    "@types/pg": "^8.16.0",
     "baseline-browser-mapping": "^2.9.11",
     "concurrently": "^9.2.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "maildev": "^2.2.1",
+    "prisma": "^5.22.0",
     "tsx": "^4.21.0"
   }
 }
