--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "framer-motion": "^12.23.26",
@@ -85,6 +86,7 @@
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.6.0",
     "sequelize": "^6.37.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
@@ -102,6 +104,7 @@
     "@types/pg": "^8.16.0",
     "baseline-browser-mapping": "^2.9.11",
     "concurrently": "^9.2.1",
+    "dotenv-cli": "^11.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "maildev": "^2.2.1",
