--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:clean": "./start-dev.sh",
     "dev:fast": "pkill -9 node 2>/dev/null; pkill -9 npm 2>/dev/null; rm -rf .next; next dev",
     "dev:next": "next dev",
-    "dev:full": "echo '🚀 Run these commands in separate terminals:' && echo '  Terminal 1: npm run dev:next' && echo '  Terminal 2: npm run maildev:dev' && echo '' && echo 'Services:' && echo '  • App: http://localhost:3000' && echo '  • Email: http://localhost:1080' && echo '  • Admin: admin@example.com (check email)'",
+    "dev:full": "echo 'Run these commands in separate terminals:' && echo '  Terminal 1: npm run dev:next' && echo '  Terminal 2: npm run maildev:dev' && echo '' && echo 'Services:' && echo '  • App: http://localhost:3000' && echo '  • Email: http://localhost:1080' && echo '  • Admin: admin@example.com (check email)'",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -53,8 +53,19 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tiptap/extension-color": "^3.14.0",
+    "@tiptap/extension-highlight": "^3.14.0",
+    "@tiptap/extension-image": "^3.14.0",
+    "@tiptap/extension-link": "^3.14.0",
+    "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/extension-text-align": "^3.14.0",
+    "@tiptap/extension-typography": "^3.14.0",
+    "@tiptap/extension-underline": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
@@ -65,17 +76,11 @@
     "@upstash/ratelimit": "^2.0.7",
     "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.23",
-    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "date-fns": "^4.1.0",
-    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "framer-motion": "^12.23.26",
     "jose": "^6.1.3",
-    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "next-themes": "^0.4.6",
@@ -85,10 +90,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.69.0",
-    "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
-    "sequelize": "^6.37.7",
-    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "zod": "^4.2.1"
@@ -105,6 +107,7 @@
     "baseline-browser-mapping": "^2.9.11",
     "concurrently": "^9.2.1",
     "dotenv-cli": "^11.0.0",
+    "glob": "^13.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "maildev": "^2.2.1",
