feat: Add getting started guide for FIRST Global Team Kenya website setup
fix: Update tailwind theming guide for semantic color usage

docs: Create comprehensive security overview for application

chore: Add README for lib directory with utility libraries and configurations

refactor: Streamline database schema migration documentation

docs: Introduce TypeScript types directory with detailed type definitions

--- a/.gitignore
+++ b/.gitignore
@@ -140,5 +140,8 @@ redis_data/
 # AI Documentations Master
 AI_DOCUMENTATIONS.mdtemp_docs/
 
+# Internal documentation (contains detailed implementation details)
+docs/internal/
+
 #Github Copilot
 .github/*
