--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "web-push": "^3.6.7",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@swc/core": "^1.15.7",
